2007-03-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: totem, gnome-vfs, eel, nautilus,
	gnome-control-center branched for 2.18.
	gtk-engines moved to desktop category.
	Fixes bug #420099.

2007-03-18  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: eog branched for 2.18.

2007-03-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched evolution, evolution-data-server,
	evolution-exchange and gtkhtml for 2.18.

2007-03-16  Claude Paroz  <claude@2xlibre.net>
	
	* releases.xml.in: Removed sawfish reference, unable to generate pot
	file.

2007-03-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched evolution-webcal and changed category of
	network-manager-applet.

2007-03-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched seahorse and gnome-nettool for 2.18.

2007-03-13  Abel Cheung  <abelcheung@gmail.com>

	* translation-teams.xml.in:
	More info for traditional Chinese team.
	* people.xml.in:
	Add more about my info.

2007-03-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-games for 2.18.

2007-03-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Removed at-spi module.

2007-03-12  David Lodge <dave@cirt.net>

	* modules.tmpl: 
	* show-stats.tmpl: More fixes to make individual module pages XHTML

2007-03-12  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Rhythmbox branched for RHYTHMBOX-0_10.

2007-03-12  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Modules branched for 2.18 (gail, atk, at-spi,
	gcalctool, gnome-icon-theme)

2007-03-12  David Lodge <dave@cirt.net>

	* releases.xml.in: Removed gnome-app-install, gnome-glossary, optimystic
	* gnome-modules.xml.in: as they aren't in svn

2007-03-12  David Lodge <dave@cirt.net>