@@ -168,6 +168,7 @@
     <module id="gnome-build"/>
     <module id="gnome-commander"/>
     <module id="gnome-cups-manager"/>
+    <module id="gnome-devel-docs"/>
     <module id="gnome-hello"/>
     <module id="gnome-jabber"/>
     <module id="gnome-mount"/>
@@ -395,6 +396,7 @@
       <module id="gtkhtml" branch="gnome-2-18"/>
       <module id="gtksourceview"/>
       <module id="gucharmap"/>
+      <module id="libgnomekbd"/>
       <module id="libgnomeprint"/>
       <module id="libgnomeprintui"/>
       <module id="libgtop"/>
