@@ -1,3 +1,10 @@
+2007-03-20  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Added gnome-devel-docs module in extras.
+	Added missing module libgnomekbd in desktop for 2.18.
+	Fixes bug #420542.
+
 2007-03-19  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
